# ord-axiomata

./: .gitignore  CHANGELOG.md  README.md  ord-axiomata.cabal
.github/workflows/: get-tested.yml
src/Data/Type/Ord/: Axiomata.hs
