cabal-version:   3.0
name:            ord-axiomata
version:         0.1.0.0
synopsis:        Axiomata & lemmata for easier use of Data.Type.Ord
description:
  When using "Data.Type.Ord", there are many facts one intuitively expects to hold that GHC is not clever enough to infer.

  We rectify this situation with a `TotalOrder` typeclass providing axiomata with which such facts may be proven to GHC.
license:         BSD-3-Clause
license-file:    LICENSE
author:          L. S. Leary
maintainer:      L.S.Leary.II@gmail.com
copyright:       (c) L. S. Leary 2025
category:        Data, Math
build-type:      Simple
extra-doc-files: CHANGELOG.md README.md
tested-with:     GHC == 9.6.7, GHC == 9.8.4, GHC == 9.10.2, GHC == 9.12.2
homepage:        https://github.com/LSLeary/ord-axiomata
bug-reports:     https://github.com/LSLeary/ord-axiomata/issues

library
  exposed-modules:  Data.Type.Ord.Axiomata
  build-depends:    base >= 4.18 && < 5
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/LSLeary/ord-axiomata.git

source-repository this
  type:     git
  location: https://github.com/LSLeary/ord-axiomata.git
  tag:      v0.1.0.0
